<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_first_ros_rclcpp_pkg</name>
  <version>0.0.1</version>
  <description>ROS2 2 rclcpp basic package for the ROS 2 seminar</description>
  <maintainer email="mings4243@gmail.com">so</maintainer>
  <license>Apache License 2.0</license>
  <author>Mikael Arguedas</author>
  <author>Morgan Quigley</author>
  <author email="jacob@openrobotics.org">Jacob Perron</author>
  <author email="pyo@robotis.com">Pyo</author>

<!-- 빌드 툴의 의존성을 기술 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

<!-- 패키지 빌드 시 필요한 의존 패키지 이름을 기술 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

 <!-- 패키지를 테스트할 때 필요한 의존 패키지 이름을 기술 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

<!-- 위에서 명시하지 않은 확장 태그명을 사용할 때 쓰인다.
     빌드 타입을 적는 <build_type>
     RViz 플러그인에 사용되는 <rviz>
     RQT 플러그인에 사용되는 <rqt_gui>
     deprecated되는 패키지를 유저에게 알리는 <deprecated> 태그 등이 있다.
 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
